--- a/style.css
+++ b/style.css
@@ -118,6 +118,7 @@ section.A{
     width: 100%;
     color: white;
     font-size: medium;
+    margin-bottom: 10px;
 }
 .Favourite-Details{
     text-align: center;
@@ -748,7 +749,7 @@ section.F{
     display: flex;
     left: 18%;
     bottom: 10%;
-    margin-left: 20%;
+    margin-left: 10%;
     /* padding-bottom: 10px; */
 }
 .navigations div {
@@ -2403,7 +2404,7 @@ a {
     display: flex;
     left: 20%;
     bottom: 10%;
-    margin-left: 10%;
+    margin-left: 0%;
     /* padding-bottom: 10px; */
 }
 }
@@ -2425,7 +2426,9 @@ a {
     
     }
     }
-
+.curve{
+    border-radius: 25px;
+}
 @media screen and (max-width: 700px) {
     .fav-details{
         text-align: center;
@@ -2456,7 +2459,7 @@ a {
     .nav-logo{
         display: none;
         position: absolute;
-        left: 5%;
+        left: 2%;
     
     }
     .navigations{
